# PokerSolver

./: CMakeLists.txt  README.md
include/: cards.h  cfr_engine.h  cli.h  game_tree.h  hand_eval.h  range_parser.h
src/: cards.cpp  cfr_engine.cpp  cli.cpp  game_tree.cpp  hand_eval.cpp  main.cpp  range_parser.cpp
